--- a/贡献方法.md
+++ b/贡献方法.md
@@ -1,6 +1,6 @@
-## :raised_hands:贡献 | Contribution
+## :raised_hands: 贡献 | Contribution
 
-Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全欢迎！来自大家的**关注、维护和贡献**，才是让这个repo继续存在的动力~
+Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全欢迎！来自大家的**关注、维护和贡献**，才是让这个 repo 继续存在的动力~
 
 电脑前的您请不要吝啬，您的作品一旦被合并至该仓库中，有可能会被无数学弟学妹仰慕。我们需要您的 PR！
 
@@ -8,16 +8,16 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 注：由于本仓库未启用 `git-lfs`，因此请不要上传单个超过 100M 的文件，否则 Commit 无效，Web端只适合 25M 以下小文件。
 
-## 操作方法
+## :wrench: 操作方法 | Operation Method
 
 由于本项目体积很大，建议采用在 **Github Web端** 直接上传的方式(当然也可以 `git clone` 下来在本地操作)，Web端具体操作如下：
 
 1. 首先 Fork 本项目，点击右上角的 `Fork` 按键即可，**注意与最新的主分支保持一致**；
 
 2. 上传自己的笔记或资料，可能会有以下情况：
-   * 上传文件到已有文件夹：打开对应文件夹，点击 `Add file` 按钮下的 `Upload file`，上传你的文件。
-   * 上传文件到新文件夹：打开任意文件夹，点击 `Add file` 按钮下的 `Upload file`，把**浏览器地址栏中文件夹名称改为你想要新建的文件夹名称，然后按下 `回车`**，再上传你的文件。
-   * 修改已有文件（如 `README.md`）：打开对应文件，点击右侧铅笔标志 `Edit this file`，修改后上传你的文件。
+   * 上传文件到已有文件夹：打开对应文件夹，点击 `Add file` 按钮下的 `Upload file`，上传您的文件。
+   * 上传文件到新文件夹：打开任意文件夹，点击 `Add file` 按钮下的 `Upload file`，把**浏览器地址栏中文件夹名称改为您想要新建的文件夹名称，然后按下 `回车`**，再上传您的文件。
+   * 修改已有文件（如 `README.md`）：打开对应文件，点击右侧铅笔标志 `Edit this file`，修改后上传您的文件。
 
 3. 提交 Pull requests
    * 提交 PR：上传完文件到个人仓库之后，点击 `Pull Request` 即可。请留意一下项目的文件组织。
@@ -26,7 +26,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 对 Github Pull requests 不熟悉的同学，可以查阅[如何参与开源项目](https://github.com/firstcontributions/first-contributions/blob/main/translations/README.zh-cn.md)中的流程
 
-## 目录组织与命名规范
+## :bulb: 目录组织与命名规范 | Directory organization and naming conventions
 
 为便于查找，此 repo 将公共课必修课以及各个专业专业课放在不同的目录下，具体基本按照以下形式组织，请各位同学提交时注意命名规范，便于大家及时找到您的作品或经验~
 
@@ -65,10 +65,9 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 如果是新开设的课程或者项目里暂时没有的课程，也欢迎大家积极创建~
 
-不要求实名，可使用昵称，但文件路径命名一定要规范（特别是二进制文件，会使仓库记录变得臃肿），提交的 commit 建议简短、恰当地命名，否则可能被 `reject`！
+不要求实名，可使用昵称，但文件路径命名一定要规范（特别是二进制文件，会使仓库记录变得臃肿），提交的 `commit` 建议简短、恰当地命名，否则可能被 `reject`！
 
-
-## :rotating_light:警告 | Warning
+## :rotating_light: 警告 | Warning
 
 下列内容为不适合上传的内容。如果您认为缺少这些资料将会影响资源的完整性，请优先考虑放在校内资源平台，或联系您的教师并由教师发布。建议您撰写一个 `readme.md ` 文档并放置一些链接或指引文字来帮助找到这些资源。
 
