--- a/贡献方法.md
+++ b/贡献方法.md
@@ -8,7 +8,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 注：由于本仓库未启用 `git-lfs`，因此请不要上传单个超过 100M 的文件，否则 Commit 无效，Web端只适合 25M 以下小文件。
 
-## :wrench: 操作方法 | Operation Method
+## :wrench: 操作方法 | Operation method
 
 由于本项目体积很大，建议采用在 **Github Web端** 直接上传的方式(当然也可以 `git clone` 下来在本地操作)，Web端具体操作如下：
 
