--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -46,7 +46,7 @@
 （可分享课程过程中可以参考的书目，注明书名、版号、作者、出版社等详细信息）
 
 e.g.
-- [1] 深入理解计算机系统 *原书第3版*（Computer Systems: A Programmer's Perspective），Randal E. Bryant, David R. O'Hallaron，机械工业出版社
-- [2] 计算机网络：自顶向下方法 *原书第8版*（Computer Networking: A Top-Down Approach），James F. Kurose, Keith W. Ross，机械工业出版社
-- [3] 计算机组成原理（*第3版*），唐朔飞主编，高等教育出版社
+- [1] 深入理解计算机系统 原书第3版（Computer Systems: A Programmer's Perspective），Randal E. Bryant, David R. O'Hallaron，机械工业出版社
+- [2] 计算机网络：自顶向下方法 原书第8版（Computer Networking: A Top-Down Approach），James F. Kurose, Keith W. Ross，机械工业出版社
+- [3] 计算机组成原理 第3版，唐朔飞主编，高等教育出版社
 
