--- a/贡献方法.md
+++ b/贡献方法.md
@@ -54,7 +54,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 - `README.md`：对于该课程的一些整体认知，比如课程难度、特点、期末考试难度、学习规划、可供参考的书籍等（学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:），具体请按照此模板：[课程说明模板](课程说明模板.md)。
 - 课程复习资料：主要包括金牌讲师团期末复习讲座的课件、复习手册、笔记等
-- 课程学习资源：金牌讲师团开箱手册、电子书（**请留意可能存在的版权问题**）、课件（建**议先向教师获得授权后再上传**）等
+- 课程学习资源：金牌讲师团开箱手册、电子书（**请留意可能存在的版权问题**）、课件（**建议先向教师获得授权后再上传**）等
 - 课程实验指导：实验环境配置教程、实验思路等（**不推荐上传与成绩考核相关的作业答案与实验代码**）
 - 课程练习题目：金牌讲师团命制的期末模拟题、经过授权允许的往年试题等
 
