--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -32,10 +32,9 @@
 
 （可以评价考试范围、难度、打分友好程度、最高分、平均分、是否捞人、挂科人数等等）
 
-### 一些经验
+### 学习经验
 
 学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:（bushi）
-
 
 （可分享关于学习方法、学习资源（如博客、b站视频、网课等）介绍、仓库指路、MOOC指路、如何备考等，也许可以指路网上的往年题博客）
 
