--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -10,7 +10,7 @@
 
 #### 1. 总体介绍
 
-（主要介绍对于该课程的一些整体认知，如课程大纲、难度、特点等）
+（主要介绍对于该课程的一些整体认知，如课程大纲、学习难度、特点等）
 
 #### 2. 关于授课
 
@@ -18,11 +18,11 @@
 
 - 教师2（注意教师的评价统一用名字缩写）
 
-（分享内容可包括教师上课风格、ppt风格、其助教答疑风格、作业、点名、考勤、小测、是否提前发ppt等）
+（分享内容可包括教师上课风格、进度安排、是否答疑、作业、点名、考勤、小测、是否提前发 PPT 等）
 
 #### 3. 关于实验
 
-（主要分享关于实验内容、实验难度、是否验收、每年实验变化、助教答疑、课上课下投入时间比例等）
+（主要分享关于实验内容、实验难度、是否验收、课上课下投入时间比例等）
 
 注：如果实验、考试进行了大幅度变化更新，可以写在对应小标题下，并加粗注明新变化。例如：
 
@@ -30,13 +30,13 @@
 
 #### 4. 关于考试
 
-（可以评价考试范围、难度、打分友好程度、最高分、平均分、是否捞人、挂科人数等等）
+（可以评价考试范围、题型、各部分内容分数占比、难度、给分怎么样、是否捞人、挂科人数等等）
 
 ### 学习经验
 
 学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:（bushi）
 
-（可分享关于学习方法、学习资源（如博客、b站视频、网课等）介绍、仓库指路、MOOC指路、如何备考等，也许可以指路网上的往年题博客）
+（可分享关于学习方法、学习资源【如博客、b站视频、MOOC网课等】介绍、仓库指路、如何备考等，也许可以指路网上的往年题博客）
 
 注：经验观点可以不同，单独陈列即可~
 
