--- a/贡献方法.md
+++ b/贡献方法.md
@@ -30,7 +30,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 由于各专业开设的课程可能出现同一课程开设在不同学期的情况，为便于查找，此 repo 将公共课必修课以及各个专业专业课放在不同的目录下，具体基本按照以下形式组织，请各位同学提交时注意命名规范，便于大家及时找到您的作品或经验~
 
-注：对于课程名字相同，但课程类型、授课、考试均不同的课程可以分别创建文件夹
+注：对于课程名字相同，但**课程类型、授课、考试均不同**的课程可以分别创建文件夹
 - 例如：人工智能数学基础作为人工智能专业的必修考试课，同时也作为其余专业的专业选修课，可在「人工智能」和「选修课程」下分别创建两个该课程目录便于查找
 ```
 |──公共必修课/[专业]必修课
