--- a/贡献方法.md
+++ b/贡献方法.md
@@ -62,8 +62,8 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 此外，您也当然可以在对应文件夹下创建一个文件夹来包含一些同质化的内容，比如
 
-- 我是 2050 秋季学期上数据结构与算法的小Q，想在「数据结构」中传一个自己的分章节笔记，即在「数据结构」文件夹下新建文件夹 `课程复习资料/数据结构_2050秋_学习笔记_小Q/`，然后往里面填东西即可。
-- 而如果已经汇总为一个文件，可以直接上传`课程复习资料/数据结构_2050秋_学习笔记_小Q.md/pdf`文件即可
+- 我是 2050 秋季学期上数据结构与算法的小Q，想在「数据结构与算法」中传一个自己的分章节笔记，即在「数据结构与算法」文件夹下新建文件夹 `课程复习资料/数据结构与算法_2050秋_学习笔记_小Q/`，然后往里面填充内容即可。
+- 而如果已经汇总为一个文件，可以直接上传`课程复习资料/数据结构与算法_2050秋_学习笔记_小Q.md/pdf`文件即可
 
 如果是新开设的课程或者项目里暂时没有的课程，也欢迎大家积极创建~
 
@@ -75,7 +75,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 - 盗版电子书/付费电子书
 - 盗版/破解版/绿色版付费软件及其安装包
-- 课程/教师主页上列出的内容（请在获得教师许可后上传）
+- 课程/教师主页上列出的内容，如课程课件Slides（请在获得教师许可后上传）
 - 与成绩考核相关的作业答案与实验代码，但鼓励上传作业中的难题思路和大实验的代码思路
 - 不应公开的历年考题试卷
 
