--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -32,11 +32,22 @@
 
 （可以评价考试范围、题型、各部分内容分数占比、难度、给分怎么样、是否捞人、挂科人数等等）
 
+#### 5. 一些可能有用的资源
+
+（如博客、b站视频、MOOC网课、仓库指路等，也许可以指路网上的往年题博客）
+e.g.
+- 关系代数练习网站： [https://dbis-uibk.github.io/relax/landing](https://dbis-uibk.github.io/relax/landing)
+- B+树可视化网站： [https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html](https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html)
+- 学长学姐们的攻略:
+  - https://zhuanlan.zhihu.com/p/450306463
+  - https://blog.csdn.net/syStardust/article/details/125309796?spm=1001.2014.3001.5502
+  - https://blog.csdn.net/nightcrystal012/article/details/131021790
+
 ### 学习经验
 
 学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:（bushi）
 
-（可分享关于学习方法、学习资源【如博客、b站视频、MOOC网课等】介绍、仓库指路、如何备考等，也许可以指路网上的往年题博客）
+（可分享关于学习方法介绍、学习过程中的坑点、如何备考等）
 
 注：经验观点可以不同，单独陈列即可~
 
