--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -35,13 +35,16 @@
 #### 5. 一些可能有用的资源
 
 （如博客、b站视频、MOOC网课、仓库指路等，也许可以指路网上的往年题博客）
-e.g.
-- 关系代数练习网站： [https://dbis-uibk.github.io/relax/landing](https://dbis-uibk.github.io/relax/landing)
-- B+树可视化网站： [https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html](https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html)
+
+e.g. 以数据库系统课程为例
+- 关系代数练习网站： https://dbis-uibk.github.io/relax/landing
+- B+树可视化网站： https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html
 - 学长学姐们的攻略:
   - https://zhuanlan.zhihu.com/p/450306463
   - https://blog.csdn.net/syStardust/article/details/125309796?spm=1001.2014.3001.5502
   - https://blog.csdn.net/nightcrystal012/article/details/131021790
+- zzn老师网课：https://www.bilibili.com/video/BV1ii4y1S7Uk/?spm_id_from=333.999.0.0
+- 2023 年春季学期金牌讲师团的讲义/笔记：https://download.csdn.net/download/ymd2002/88062214?spm=1001.2014.3001.5503
 
 ### 学习经验
 
