--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -30,7 +30,7 @@
 
 #### 4. 关于考试
 
-（可以评价考试范围、题型、各部分内容分数占比、难度、给分怎么样、是否捞人、挂科人数等等）
+（可以评价考试范围、题型、侧重点、各部分内容分数占比、难度、给分怎么样、是否捞人、挂科人数等等）
 
 ### 一些可能有用的资源
 
