--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -1,8 +1,8 @@
-## 课程名称
+## （课程名称）
 
-本课程为考试 / 考查 / 方向限选 / 专业选修 / 外专业课，占 x 学分。（如有变动标注不同年份）
-
-分数构成 = **20%** 作业分 + **30%** 实验分 + **50%** 期末考试（如有变动标注年份）
+**课程性质**：考试 / 考查 / 方向限选 / 专业选修 / 外专业课（如有变动标注不同年份）
+**学分**：x（如有变动标注不同年份）
+**分数构成** = **20%** 作业分 + **30%** 实验分 + **50%** 期末考试（如有变动标注不同年份）
 
 ### 关于课程
 
@@ -50,7 +50,7 @@ e.g. 以数据库系统课程为例
 
 学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:（bushi）
 
-（可分享关于学习方法介绍、学习过程中的坑点、如何备考等）
+（可分享关于学习方法介绍、学习过程中的坑点、如何去学习这门课程、如何备考等）
 
 注：经验观点可以不同，单独陈列即可~
 
