--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -24,7 +24,7 @@
 
 #### 3. 关于实验
 
-（主要分享关于实验内容、实验难度、是否验收、课上课下投入时间比例等）
+（主要分享关于实验内容、实验难度、是否验收、是否涉及没有学过的编程平台或环境、课上课下投入时间比例等）
 
 注：如果实验、考试进行了大幅度变化更新，可以写在对应小标题下，并加粗注明新变化。例如：
 
