--- a/贡献方法.md
+++ b/贡献方法.md
@@ -13,7 +13,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 由于本项目体积很大，建议采用在 **Github Web端** 直接上传的方式(当然也可以 `git clone` 下来在本地操作)，Web端具体操作如下：
 
 1. 首先 Fork 本项目，点击右上角的 `Fork` 按键即可，**注意与最新的主分支保持一致**；
-   * 尝试网页版 GitHub 新增的功能，`Fetch & Merge`一键拉取最新的仓库并更新自己的分支
+   * 可以使用网页版 GitHub 中 `Fetch & Merge` 一键拉取最新的仓库并更新自己的分支
 
 3. 上传自己的笔记或资料，可能会有以下情况：
    * 上传文件到已有文件夹：打开对应文件夹，点击 `Add file` 按钮下的 `Upload file`，上传您的文件。
