--- a/贡献方法.md
+++ b/贡献方法.md
@@ -21,7 +21,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
    * 修改已有文件（如 `README.md`）：打开对应文件，点击右侧铅笔标志 `Edit this file`，修改后上传您的文件。
 
 4. 提交 Pull requests
-   * 提交 PR：上传完文件到个人仓库之后，点击 `Pull Request` 即可。请留意一下项目的文件组织。
+   * 提交 PR：上传完文件到个人仓库之后，点击 `Pull Request` 即可。请留意一下项目的文件组织和命名规范。
 
    * 也可以直接附加在 [Issue](https://github.com/HIT-FC-OpenCS/CS_Courses/issues/new) 中，由维护者进行添加。
 
