modify format and upload files

--- a/贡献方法.md
+++ b/贡献方法.md
@@ -39,21 +39,21 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
     │  │  README.md
     │  │
     │  └─课程复习资料
-    │          [课程]_[授课学期]_复习讲座.pptx/pdf
-    │          [课程]_[授课学期]_复习手册.md/pdf
+    │          [课程]-[授课学期]-复习讲座.pptx/pdf
+    │          [课程]-[授课学期]-复习手册.md/pdf
     │          ......
     │  │
     │  └─课程学习资源
     │          ......
     │  └─课程实验指导
-    │          [课程]_[授课学期]_实验指导书.pdf......
+    │          [课程]-[授课学期]-实验指导书.pdf......
     │  └─课程练习题目
-    │          [课程]_[授课学期]_模拟题/往年题等......
+    │          [课程]-[授课学期]-模拟题/往年题等......
     ......
 |──公共必修课/[专业]必修课
 ```
 
-提交的命名格式为 `[课程]_[授课学期]_(资料的名称).后缀`（课程请使用全名，授课学期为20xx春/秋），依据您的资料类型放置至对应的目录下即可。
+提交的命名格式为 `[课程]-[授课学期]-(资料的名称).后缀`（课程请使用全名，授课学期为20xx春/秋），依据您的资料类型放置至对应的目录下即可。
 
 - `README.md`：对于该课程的一些整体认知，比如课程难度、特点、期末考试难度、学习规划、可供参考的书籍等（学长学姐们的宝贵经验 :heavy_multiplication_x: 血泪教训 :heavy_check_mark:），具体请按照此模板：[课程说明模板](课程说明模板.md)。
 - 课程复习资料：主要包括金牌讲师团期末复习讲座的课件、复习手册、笔记等
@@ -63,8 +63,8 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 此外，您也当然可以在对应文件夹下创建一个文件夹来包含一些同质化的内容，比如
 
-- 我是 2050 秋季学期上数据结构与算法的小Q，想在「数据结构与算法」中传一个自己的分章节笔记，即在「数据结构与算法」文件夹下新建文件夹 `课程复习资料/数据结构与算法_2050秋_学习笔记_小Q/`，然后往里面填充内容即可。
-- 而如果已经汇总为一个文件，可以直接上传`课程复习资料/数据结构与算法_2050秋_学习笔记_小Q.md/pdf`文件即可
+- 我是 2050 秋季学期上数据结构与算法的小Q，想在「数据结构与算法」中传一个自己的分章节笔记，即在「数据结构与算法」文件夹下新建文件夹 `课程复习资料/数据结构与算法-2050秋-学习笔记-小Q/`，然后往里面填充内容即可。
+- 而如果已经汇总为一个文件，可以直接上传`课程复习资料/数据结构与算法-2050秋-学习笔记-小Q.md/pdf`文件即可
 
 如果是新开设的课程或者项目里暂时没有的课程，也欢迎大家积极创建~
 
