update course 信息安全数学基础

--- a/公共课程/信息安全数学基础/课程说明.md
+++ b/公共课程/信息安全数学基础/课程说明.md
@@ -2,9 +2,9 @@
 
 **课程性质**：考试课
 
-**学分**：3
+**学分**：3（2021级）
 
-**分数构成** = **10%** 出勤 + **10%** 作业 + **20%** 大作业/翻转课堂 + **60%** 期末考试
+**分数构成** = **10%** 出勤 + **10%** 作业 + **20%** 大作业/翻转课堂 + **60%** 期末考试（2021级）
 
 ### 关于课程
 
@@ -18,9 +18,13 @@
 
 #### 3. 关于作业
 
+（2021级）
+
 作业较简单，但是要认真做，考试可能考这类题。剩余部分是大作业/翻转课堂二选一，大作业的形式是使用latex排版，写一篇报告；翻转课堂的形式是讲一个与该课程所讲述知识点相关的密码学知识。大作业/翻转课堂部分基本都会被扣一些分数，但一般来讲选择翻转课堂给分会稍微高些。
 
 #### 4. 关于考试
+
+（2021级）
 
 考试范围局限于ppt中的内容。题量较大，考察范围较广，一个知识点可能会反复考察多次，但题目难度大多是初中数学题的水平。
 
