--- a/公共课程/数据结构与算法/课程说明.md
+++ b/公共课程/数据结构与算法/课程说明.md
@@ -2,9 +2,9 @@
 
 **课程性质**：考试
 
-**学分**：3.5（2022级）
+**学分**：3.5
 
-**分数构成** = **10%** 作业与出勤 + **20%** 实验 + **70%** 期末考试（2022级）
+**分数构成** = **10%** 作业与出勤 + **20%** 实验 + **70%** 期末考试（2022级-2023秋）
 
 
 #### 1. 总体介绍
@@ -19,15 +19,15 @@
 #### 2. 关于授课
 
 - ZTY
-- 海归博士后，我校计算学部的首席博士答辩主席之一。
-- 经验极其丰富，Z老师甚至与课程中会讲到的很多算法的创始人大牛们曾经都共事过。讲课风格属于冷幽默，知识点讲述较为清晰，进度安排还算合理（符合学校的进度要求，但是由于课时紧张，某些重难点给的时间还是略少），但是课堂氛围稍显沉闷，偶使人困倦。老师非常耐心，课堂内容每推进一段就会停下来问同学们有无疑惑之处，下课后也会一直留在教室里直到给全部同学解答完疑惑后才走。
-- 课堂没有点名和小测，但是Z老师偶尔会与当堂的同学们自拍合照，不知道算不算签到的一种~
-- PPT会在每一章全部讲完后统一发
+  - 经验极其丰富，Z老师甚至与课程中会讲到的很多算法的创始人大牛们曾经都共事过。讲课风格属于冷幽默，知识点讲述较为清晰，进度安排还算合理（符合学校的进度要求，但是由于课时紧张，某些重难点给的时间还是略少），但是课堂氛围稍显沉闷，偶使人困倦。老师非常耐心，课堂内容每推进一段就会停下来问同学们有无疑惑之处，下课后也会一直留在教室里直到给全部同学解答完疑惑后才走。
+  - 课堂没有点名和小测，但是Z老师偶尔会与当堂的同学们自拍合照，不知道算不算签到的一种~
+  - PPT会在每一章全部讲完后统一发
+
 
 
 #### 3. 关于实验
 
-（2022级ZTY老师）
+（2022级-2023秋）
 
 实验一共四次，每次4课时，但是其实每次试验前老师都会提前下发实验内容（少则提前3、4天，最多甚至提前10天），时间比较充裕。
 
@@ -38,7 +38,7 @@
 
 #### 4. 关于考试
 
-（2022级）
+（2022级-2023秋）
 
 考试范围：课上讲解的全部知识点，大于考研考纲范围；
 
