--- a/课程说明模板.md
+++ b/课程说明模板.md
@@ -1,10 +1,14 @@
 ## （课程名称）
 
-**课程性质**：考试 / 考查 / 方向限选 / 专业选修 / 外专业课（如有变动标注不同年份）
+**课程性质**：考试 / 考查 / 方向限选 / 专业选修 / 外专业课（如有变动标注不同年份及学期）
 
-**学分**：x（如有变动标注不同年份）
+**学分**：x（如有变动标注不同年份及学期）
 
-**分数构成** = **20%** 作业分 + **30%** 实验分 + **50%** 期末考试（如有变动标注不同年份）
+**分数构成** = **20%** 作业分 + **30%** 实验分 + **50%** 期末考试（如有变动标注不同年份及学期）
+
+（注：由于学院开课涉及同一课程在不同学期针对不同专业、年级同时开设，为避免歧义，请以（年级-年份学期）作为**唯一标识**。）
+
+e.g **分数构成** = **25%** 作业分 + **25%** 实验分 + **50%** 期末考试（2021级-2022秋）
 
 ### 关于课程
 
@@ -20,7 +24,7 @@
 
 - 教师2（注意教师的评价统一用名字缩写）
 
-（分享内容可包括教师上课风格、进度安排、是否答疑、作业、点名、考勤、小测、是否提前发 PPT 等）
+（分享内容可包括教师上课风格、进度安排、是否答疑、作业、点名、考勤、小测、是否提前发 PPT 等，**只需介绍老师授课相关即可**）
 
 #### 3. 关于实验
 
@@ -33,6 +37,18 @@
 #### 4. 关于考试
 
 （可以评价考试范围、题型、侧重点、各部分内容分数占比、难度、给分怎么样、是否捞人、挂科人数等等）
+
+（可以按年份进行划分，以横线作为分割，可同样应用于上述模块）
+
+e.g （2021级-2022秋）
+
+.......
+
+---
+
+（2022级-2023秋）
+
+.......
 
 ### 一些可能有用的资源
 
