--- a/公共课程/数据结构与算法/课程说明.md
+++ b/公共课程/数据结构与算法/课程说明.md
@@ -65,9 +65,9 @@
 
 ### 参考书目
 
-《数据结构与算法分析 C语言实现》  Mark Allen Weiss编著  机械工业出版社
-《算法导论》  Thomas H. Cormen等编著  机械工业出版社
-《计算机程序设计艺术》————<卷一 基本算法>的后半部分和<卷二 排序与查找>  Donald E.Knuth编著  中国工信出版集团  **这本书难度太大，不建议在平时学习的时候当作参考书看，建议花大段时间啃读**
+- [1] 《数据结构与算法分析 C语言实现》  Mark Allen Weiss编著  机械工业出版社
+- [2] 《算法导论》  Thomas H. Cormen等编著  机械工业出版社
+- [3] 《计算机程序设计艺术》————<卷一 基本算法>的后半部分和<卷二 排序与查找>  Donald E.Knuth编著  中国工信出版集团  **这本书难度太大，不建议在平时学习的时候当作参考书看，建议花大段时间啃读**
 
 #### 分数参考
 2022级内容编者 94分 教学班第2
