--- a/公共课程/信息安全数学基础/课程说明.md
+++ b/公共课程/信息安全数学基础/课程说明.md
@@ -17,8 +17,8 @@
 #### 2. 关于授课
 
 - hq：
-- （2021级）老师很和善，对学生也挺不错。线下的课要认真听，老师讲的线下课要比b站里的线上课易懂很多。
-- （2022级）老师非常和蔼有耐心，讲课风格属于冷幽默，对待学生很好。由于课程性质及要求缘故，讲课过程中偶有讲述不太清晰的地方，需要课下自己找资料慢慢理解。平时分、大作业和实验部分扣分很多，但是是大家都很多（我们这届扣分最少的人这三部分加在一起也扣了6分），并且这门课只有h老师这一位老师讲授，因此很公平，无需担心。考试前老师会发考纲便于同学们复习。
+  - （2021级）老师很和善，对学生也挺不错。线下的课要认真听，老师讲的线下课要比b站里的线上课易懂很多。
+  - （2022级）老师非常和蔼有耐心，讲课风格属于冷幽默，对待学生很好。由于课程性质及要求缘故，讲课过程中偶有讲述不太清晰的地方，需要课下自己找资料慢慢理解。平时分、大作业和实验部分扣分很多，但是是大家都很多（我们这届扣分最少的人这三部分加在一起也扣了6分），并且这门课只有h老师这一位老师讲授，因此很公平，无需担心。考试前老师会发考纲便于同学们复习。
 
 #### 3. 关于作业
 
@@ -67,4 +67,4 @@
 
 ### 参考书目
 
-《信息安全数学基础》  贾春福等编著  机械工业出版社
+- [1] 《信息安全数学基础》  贾春福等编著  机械工业出版社
