--- a/公共课程/数据结构与算法/课程说明.md
+++ b/公共课程/数据结构与算法/课程说明.md
@@ -49,7 +49,7 @@
 
 给分特点：高分人数很少，区分度很高，绝大部分人的分数分布在75~89之间（统计总体有限可能稍有误差），90分非常难得，95分就有很大几率在除计科以外的专业排名榜首。（是否捞人以及挂科率如何未知，敬请后人增删）
 
-#### 分数参考
+#### 5. 分数参考
 2022级内容编者 94分 教学班第2
 
 ### 一些可能有用的资源
