--- a/公共课程/信息安全数学基础/课程说明.md
+++ b/公共课程/信息安全数学基础/课程说明.md
@@ -30,7 +30,13 @@
 
 作业部分同上。大作业部分由于实验的加入，hq老师为了减轻课业压力将翻转课堂删掉，统一写小论文，要求同样是latex排版。
 
-#### 4. 关于考试
+#### 4. 关于实验
+
+（2022级）
+
+实验部分是2023秋按照学校要求新增的内容，一共4次，每次5分。实验内容是用Java语言编程实现数论和密码学的相关算法，难度稍大，是同学们主要的扣分点，老师会提前1~2天下发实验要求，强烈建议大家提前做，因为在正常要求的4个课时内完成必做部分以及实验报告难度很大，选作部分几乎不可能完成，而仅完成必做部分只能得3分，需要重视。
+
+#### 5. 关于考试
 
 （2021级）
 
@@ -42,13 +48,9 @@
 
 试题类型：选择题 + 判断题 + 简答题 + 计算题
 
-**分数参考：**（2021级）2022秋 97.6分 教学班排名第一 （2022级）2023秋 92.5分 教学班排名第二
+#### 6. 分数参考：
+（2021级）2022秋 97.6分 教学班排名第一 （2022级）2023秋 92.5分 教学班排名第二
 
-#### 5. 关于实验
-
-（2022级）
-
-实验部分是2023秋按照学校要求新增的内容，一共4次，每次5分。实验内容是用Java语言编程实现数论和密码学的相关算法，难度稍大，是同学们主要的扣分点，老师会提前1~2天下发实验要求，强烈建议大家提前做，因为在正常要求的4个课时内完成必做部分以及实验报告难度很大，选作部分几乎不可能完成，而仅完成必做部分只能得3分，需要重视。
 
 ### 一些可能有用的资源
 
