--- a/公共课程/信息安全数学基础/课程说明.md
+++ b/公共课程/信息安全数学基础/课程说明.md
@@ -14,6 +14,7 @@
 
 该课程是信息安全和网络空间安全专业学生的一门必修课程，课程学习难度一般，围绕初等数论、近世代数、数理逻辑三个方面进行展开，为密码学打下基础。后两者可以看作是数理逻辑与近世代数课程的简化版本。个人认为相比于其他专业课，这门课程更像是一门概论性质的数学课，简要介绍计算机安全行业需要用到的数学知识，课内对各处知识点的要求很低，大都是了解，不要求应用，因此课内学习压力很小。想要深入学习必须借助课外资料。
 
+> Update：2022 级新增实验部分
 #### 2. 关于授课
 
 - hq：
