--- a/make-web/docs/公共课程/计算机系统.md
+++ b/make-web/docs/公共课程/计算机系统.md
@@ -5,5 +5,6 @@
 - [计算机系统-2022春-复习讲座U2-3](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程复习资料/计算机系统-2022春-复习讲座U2-3.pptx)
 - [计算机系统-2022春-复习讲座U4-7](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程复习资料/计算机系统-2022春-复习讲座U4-7.pptx)
 - [计算机系统-2022春-复习讲座U8-9](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程复习资料/计算机系统-2022春-复习讲座U8-9.pptx)
+- [计算机系统-2023春-复习讲座-上半部分](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程复习资料/计算机系统-2023春-复习讲座-上半部分.pdf)
 - [计算机系统-2023春-复习讲座-下半部分](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程复习资料/计算机系统-2023春-复习讲座-下半部分.pptx)
 - [计算机系统-2022春-模拟题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机系统/课程练习题目/计算机系统-2022春-模拟题.pdf)
