update resource display in website

--- a/make-web/docs/人工智能/模式识别与机器学习.md
+++ b/make-web/docs/人工智能/模式识别与机器学习.md
@@ -68,5 +68,5 @@
 
 ### 资源列表
 
-- [模式识别与机器学习A-2023秋-复习手册](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/人工智能/模式识别与机器学习/课程复习资料/模式识别与机器学习A-2023秋-复习手册.pdf)
-- [模式识别与机器学习A-2023秋-复习讲座](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/人工智能/模式识别与机器学习/课程复习资料/模式识别与机器学习A-2023秋-复习讲座.pdf)
+- [模式识别与机器学习A-2023秋-复习手册.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/人工智能/模式识别与机器学习/课程复习资料/模式识别与机器学习A-2023秋-复习手册.pdf)
+- [模式识别与机器学习A-2023秋-复习讲座.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/人工智能/模式识别与机器学习/课程复习资料/模式识别与机器学习A-2023秋-复习讲座.pdf)
