--- a/make-web/docs/信息安全/信息内容安全.md
+++ b/make-web/docs/信息安全/信息内容安全.md
@@ -68,5 +68,5 @@
 
 ### 资源列表
 
-- [信息内容安全-2023春-复习讲座原稿](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/信息内容安全/课程复习资料/信息内容安全-2023春-复习讲座原稿.pdf)
-- [信息内容安全-2023春-复习讲座原稿勘误](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/信息内容安全/课程复习资料/信息内容安全-2023春-复习讲座原稿勘误.pdf)
+- [信息内容安全-2023春-复习讲座原稿.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/信息内容安全/课程复习资料/信息内容安全-2023春-复习讲座原稿.pdf)
+- [信息内容安全-2023春-复习讲座原稿勘误.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/信息内容安全/课程复习资料/信息内容安全-2023春-复习讲座原稿勘误.pdf)
