--- a/make-web/docs/信息安全/密码学.md
+++ b/make-web/docs/信息安全/密码学.md
@@ -33,4 +33,4 @@
 
 ### 资源列表
 
-- [密码学原理-2022秋-实验报告](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/密码学/课程实验指导/密码学原理-2022秋-实验报告.pdf)
+- [密码学原理-2022秋-实验报告.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/密码学/课程实验指导/密码学原理-2022秋-实验报告.pdf)
