--- a/make-web/docs/信息安全/软件安全.md
+++ b/make-web/docs/信息安全/软件安全.md
@@ -16,4 +16,4 @@
 
 ### 资源列表
 
-- [软件安全-2023秋-课件](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/软件安全/课程学习资源/软件安全-2023秋-课件.pdf)
+- [软件安全-2023秋-课件.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/信息安全/软件安全/课程学习资源/软件安全-2023秋-课件.pdf)
