--- a/make-web/docs/公共课程/数据库系统.md
+++ b/make-web/docs/公共课程/数据库系统.md
@@ -2,6 +2,6 @@
 
 ### 资源列表
 
-- [数据库系统-2023春-复习笔记](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023春-复习笔记.pdf)
-- [数据库系统-2023秋-复习讲座](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023秋-复习讲座.pdf)
-- [开箱手册-数据库系统](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程学习资源/开箱手册-数据库系统.pdf)
+- [数据库系统-2023春-复习笔记.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023春-复习笔记.pdf)
+- [数据库系统-2023秋-复习讲座.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023秋-复习讲座.pdf)
+- [开箱手册-数据库系统.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程学习资源/开箱手册-数据库系统.pdf)
