--- a/make-web/docs/公共课程/数据结构与算法.md
+++ b/make-web/docs/公共课程/数据结构与算法.md
@@ -81,14 +81,14 @@
 
 ### 资源列表
 
-- [数据结构与算法-2022秋-复习讲座-线性表](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-2022秋-复习讲座-线性表.pptx)
-- [数据结构与算法-课程复习提纲（一）](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-课程复习提纲（一）.pdf)
-- [数据结构与算法-课程复习提纲（二）](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-课程复习提纲（二）.pdf)
-- [数据结构与算法复习例题（算法题）](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法复习例题（算法题）.pdf)
-- [数据结构与算法复习例题（选择题）](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法复习例题（选择题）.pdf)
-- [数据结构与算法常见代码](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法常见代码.pdf)
-- [数据结构与算法-2021秋-期末回忆题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-期末回忆题.pdf)
-- [数据结构与算法-2021秋-模拟题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-模拟题.pdf)
-- [数据结构与算法-2021秋-模拟题答案(更正)](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-模拟题答案(更正).pdf)
-- [数据结构与算法-2022秋-模拟题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2022秋-模拟题.doc)
-- [数据结构与算法-2022秋-模拟题答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2022秋-模拟题答案.doc)
+- [数据结构与算法-2022秋-复习讲座-线性表.pptx](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-2022秋-复习讲座-线性表.pptx)
+- [数据结构与算法-课程复习提纲（一）.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-课程复习提纲（一）.pdf)
+- [数据结构与算法-课程复习提纲（二）.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法-课程复习提纲（二）.pdf)
+- [数据结构与算法复习例题（算法题）.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法复习例题（算法题）.pdf)
+- [数据结构与算法复习例题（选择题）.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法复习例题（选择题）.pdf)
+- [数据结构与算法常见代码.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程复习资料/数据结构与算法常见代码.pdf)
+- [数据结构与算法-2021秋-期末回忆题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-期末回忆题.pdf)
+- [数据结构与算法-2021秋-模拟题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-模拟题.pdf)
+- [数据结构与算法-2021秋-模拟题答案(更正).pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2021秋-模拟题答案(更正).pdf)
+- [数据结构与算法-2022秋-模拟题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2022秋-模拟题.doc)
+- [数据结构与算法-2022秋-模拟题答案.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据结构与算法/课程练习题目/数据结构与算法-2022秋-模拟题答案.doc)
