--- a/make-web/docs/公共课程/编译系统.md
+++ b/make-web/docs/公共课程/编译系统.md
@@ -2,4 +2,4 @@
 
 ### 资源列表
 
-- [编译系统-2023春-期末回忆题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/编译系统/课程练习题目/编译系统-2023春-期末回忆题.pdf)
+- [编译系统-2023春-期末回忆题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/编译系统/课程练习题目/编译系统-2023春-期末回忆题.pdf)
