--- a/make-web/docs/计算机科学与技术/嵌入式系统设计与实现.md
+++ b/make-web/docs/计算机科学与技术/嵌入式系统设计与实现.md
@@ -2,4 +2,4 @@
 
 ### 资源列表
 
-- [嵌入式系统设计与实现-2023秋-复习指北&课后习题整理](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/计算机科学与技术/嵌入式系统设计与实现/课程复习资料/嵌入式系统设计与实现-2023秋-复习指北&课后习题整理.pdf)
+- [嵌入式系统设计与实现-2023秋-复习指北&课后习题整理.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/计算机科学与技术/嵌入式系统设计与实现/课程复习资料/嵌入式系统设计与实现-2023秋-复习指北&课后习题整理.pdf)
