--- a/make-web/docs/公共课程/信息安全数学基础.md
+++ b/make-web/docs/公共课程/信息安全数学基础.md
@@ -76,4 +76,4 @@
 
 ### 资源列表
 
-- [信息安全数学基础-2022秋-ppt汇总](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/信息安全数学基础/课程学习资源/信息安全数学基础-2022秋-ppt汇总.pdf)
+- [信息安全数学基础-2022秋-ppt汇总.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/信息安全数学基础/课程学习资源/信息安全数学基础-2022秋-ppt汇总.pdf)
