--- a/make-web/docs/公共课程/形式语言与自动机.md
+++ b/make-web/docs/公共课程/形式语言与自动机.md
@@ -2,4 +2,4 @@
 
 ### 资源列表
 
-- [形式语言与自动机-2023春-复习讲座-下半部分](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/形式语言与自动机/课程复习资料/形式语言与自动机-2023春-复习讲座-下半部分.pdf)
+- [形式语言与自动机-2023春-复习讲座-下半部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/形式语言与自动机/课程复习资料/形式语言与自动机-2023春-复习讲座-下半部分.pdf)
