--- a/make-web/docs/公共课程/概率论与数理统计.md
+++ b/make-web/docs/公共课程/概率论与数理统计.md
@@ -2,16 +2,16 @@
 
 ### 资源列表
 
-- [概率论与数理统计-2022秋-复习手册-概率论部分](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程复习资料/概率论与数理统计-2022秋-复习手册-概率论部分.pdf)
-- [概率论与数理统计-2022秋-复习讲座-数理统计部分](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程复习资料/概率论与数理统计-2022秋-复习讲座-数理统计部分.pptx)
-- [概率论与数理统计-2012秋-试题及答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2012秋-试题及答案.doc)
-- [概率论与数理统计-2013年-试题及答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2013年-试题及答案.doc)
-- [概率论与数理统计-2015-2020年试题集](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2015-2020年试题集.pdf)
-- [概率论与数理统计-2015-2020年试题集答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2015-2020年试题集答案.pdf)
-- [概率论与数理统计-2021年-试题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2021年-试题.pdf)
-- [概率论与数理统计-2022秋-模拟试题1](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟试题1.pdf)
-- [概率论与数理统计-2022秋-模拟试题2](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟试题2.pdf)
-- [概率论与数理统计-2022秋-模拟题1答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟题1答案.pdf)
-- [概率论与数理统计-2022秋-模拟题2答案](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟题2答案.pdf)
-- [概率论与数理统计-2022秋-练习题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-练习题.pdf)
-- [概率论与数理统计-2022秋-试题及答案(C)](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-试题及答案(C).pdf)
+- [概率论与数理统计-2022秋-复习手册-概率论部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程复习资料/概率论与数理统计-2022秋-复习手册-概率论部分.pdf)
+- [概率论与数理统计-2022秋-复习讲座-数理统计部分.pptx](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程复习资料/概率论与数理统计-2022秋-复习讲座-数理统计部分.pptx)
+- [概率论与数理统计-2012秋-试题及答案.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2012秋-试题及答案.doc)
+- [概率论与数理统计-2013年-试题及答案.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2013年-试题及答案.doc)
+- [概率论与数理统计-2015-2020年试题集.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2015-2020年试题集.pdf)
+- [概率论与数理统计-2015-2020年试题集答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2015-2020年试题集答案.pdf)
+- [概率论与数理统计-2021年-试题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2021年-试题.pdf)
+- [概率论与数理统计-2022秋-模拟试题1.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟试题1.pdf)
+- [概率论与数理统计-2022秋-模拟试题2.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟试题2.pdf)
+- [概率论与数理统计-2022秋-模拟题1答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟题1答案.pdf)
+- [概率论与数理统计-2022秋-模拟题2答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-模拟题2答案.pdf)
+- [概率论与数理统计-2022秋-练习题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-练习题.pdf)
+- [概率论与数理统计-2022秋-试题及答案(C).pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/概率论与数理统计/课程练习题目/概率论与数理统计-2022秋-试题及答案(C).pdf)
