--- a/make-web/docs/公共课程/算法设计与分析.md
+++ b/make-web/docs/公共课程/算法设计与分析.md
@@ -68,5 +68,6 @@
 
 ### 资源列表
 
-- [算法设计与分析-2023秋-复习讲座](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/算法设计与分析/课程复习资料/算法设计与分析-2023秋-复习讲座.pptx)
-- [算法设计与分析-2021秋-期末回忆题](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/算法设计与分析/课程练习题目/算法设计与分析-2021秋-期末回忆题.pdf)
+- [算法设计与分析-2023秋-复习讲座.pptx](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/算法设计与分析/课程复习资料/算法设计与分析-2023秋-复习讲座.pptx)
+- [算法设计与分析-北大屈婉玲老师课件.zip](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/算法设计与分析/课程学习资源/算法设计与分析-北大屈婉玲老师课件.zip)
+- [算法设计与分析-2021秋-期末回忆题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/算法设计与分析/课程练习题目/算法设计与分析-2021秋-期末回忆题.pdf)
