--- a/make-web/docs/数据科学与大数据技术/大数据分析.md
+++ b/make-web/docs/数据科学与大数据技术/大数据分析.md
@@ -2,5 +2,5 @@
 
 ### 资源列表
 
-- [大数据分析-2023秋-复习讲座](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/数据科学与大数据技术/大数据分析/课程复习资料/大数据分析-2023秋-复习讲座.pdf)
-- [大数据分析-2023秋-计算题整理](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/数据科学与大数据技术/大数据分析/课程复习资料/大数据分析-2023秋-计算题整理.pdf)
+- [大数据分析-2023秋-复习讲座.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/数据科学与大数据技术/大数据分析/课程复习资料/大数据分析-2023秋-复习讲座.pdf)
+- [大数据分析-2023秋-计算题整理.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/数据科学与大数据技术/大数据分析/课程复习资料/大数据分析-2023秋-计算题整理.pdf)
