--- a/make-web/docs/公共课程/数据库系统.md
+++ b/make-web/docs/公共课程/数据库系统.md
@@ -5,3 +5,14 @@
 - [数据库系统-2023春-复习笔记.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023春-复习笔记.pdf)
 - [数据库系统-2023秋-复习讲座.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程复习资料/数据库系统-2023秋-复习讲座.pdf)
 - [开箱手册-数据库系统.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程学习资源/开箱手册-数据库系统.pdf)
+- [数据库系统-2020春A-往年题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春A-往年题.pdf)
+- [数据库系统-2020春A-往年题答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春A-往年题答案.pdf)
+- [数据库系统-2020春C-往年题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春C-往年题.pdf)
+- [数据库系统-2020春C-往年题答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春C-往年题答案.pdf)
+- [数据库系统-2021春-往年题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2021春-往年题.pdf)
+- [数据库系统-2023秋-作业一答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业一答案.pdf)
+- [数据库系统-2023秋-作业七及答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业七及答案.pdf)
+- [数据库系统-2023秋-作业二答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业二答案.pdf)
+- [数据库系统-2023秋-作业五答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业五答案.pdf)
+- [数据库系统-2023秋-作业六及答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业六及答案.pdf)
+- [数据库系统-2023秋-作业四答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业四答案.pdf)
