--- a/make-web/docs/公共课程/操作系统.md
+++ b/make-web/docs/公共课程/操作系统.md
@@ -3,3 +3,14 @@
 ### 资源列表
 
 - [操作系统-2023春-关于几种调度方式的整理.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程复习资料/操作系统-2023春-关于几种调度方式的整理.pdf)
+- [操作系统-2023秋-寒假帮扶讲座上半部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程复习资料/操作系统-2023秋-寒假帮扶讲座上半部分.pdf)
+- [操作系统-2023秋-寒假帮扶讲座下半部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程复习资料/操作系统-2023秋-寒假帮扶讲座下半部分.pdf)
+- [操作系统-2005春A-往年题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2005春A-往年题.doc)
+- [操作系统-2005春B-往年题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2005春B-往年题.doc)
+- [操作系统-2006春-试题A.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2006春-试题A.doc)
+- [操作系统-2008CS试卷-往年题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2008CS试卷-往年题.doc)
+- [操作系统-2008软件试题-往年题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2008软件试题-往年题.doc)
+- [操作系统-2009-SE试题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2009-SE试题.doc)
+- [操作系统-2009CS-试卷.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2009CS-试卷.doc)
+- [操作系统-2010CS-试卷.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2010CS-试卷.doc)
+- [操作系统-2011秋-试题.doc](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/操作系统/课程练习题目/操作系统-2011秋-试题.doc)
