--- a/make-web/docs/公共课程/数据库系统.md
+++ b/make-web/docs/公共课程/数据库系统.md
@@ -10,9 +10,4 @@
 - [数据库系统-2020春C-往年题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春C-往年题.pdf)
 - [数据库系统-2020春C-往年题答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2020春C-往年题答案.pdf)
 - [数据库系统-2021春-往年题.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2021春-往年题.pdf)
-- [数据库系统-2023秋-作业一答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业一答案.pdf)
-- [数据库系统-2023秋-作业七及答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业七及答案.pdf)
-- [数据库系统-2023秋-作业二答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业二答案.pdf)
-- [数据库系统-2023秋-作业五答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业五答案.pdf)
-- [数据库系统-2023秋-作业六及答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业六及答案.pdf)
-- [数据库系统-2023秋-作业四答案.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业四答案.pdf)
+- [数据库系统-2023秋-作业题答案.zip](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/数据库系统/课程练习题目/数据库系统-2023秋-作业题答案.zip)
