--- a/make-web/docs/公共课程/计算机网络.md
+++ b/make-web/docs/公共课程/计算机网络.md
@@ -7,3 +7,6 @@
 - [计算机网络-2023秋-复习讲座上半部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程复习资料/计算机网络-2023秋-复习讲座上半部分.pdf)
 - [计算机网络-2023秋-复习讲座下半部分(带笔迹).pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程复习资料/计算机网络-2023秋-复习讲座下半部分(带笔迹).pdf)
 - [计算机网络-2023秋_复习讲座下半部分.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程复习资料/计算机网络-2023秋_复习讲座下半部分.pdf)
+- [计网笔记_1.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程学习资源/计网笔记_1.pdf)
+- [计网笔记_2.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程学习资源/计网笔记_2.pdf)
+- [计网笔记_3.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机网络/课程学习资源/计网笔记_3.pdf)
