--- a/make-web/docs/公共课程/计算机组成原理.md
+++ b/make-web/docs/公共课程/计算机组成原理.md
@@ -89,3 +89,4 @@
 
 ### 资源列表
 
+- [计算机组成原理-2024春-开箱手册.pdf](https://raw.githubusercontent.com/HIT-FC-OpenCS/CS_Courses/main/公共课程/计算机组成原理/课程学习资源/计算机组成原理-2024春-开箱手册.pdf)
